feat: bomba